salesforce/force-app/main/default/objects/Push_Token__c/Push_Token__c.object-meta.xml
<CustomObject>
    <label>Push Token</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Push Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>