salesforce/force-app/main/default/objects/Push_Token__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Push Tokens</relationshipLabel>
    <relationshipName>Push_Tokens</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>