salesforce/force-app/main/default/objects/Push_Token__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ios</fullName>
                <label>iOS</label>
            </value>
            <value>
                <fullName>android</fullName>
                <label>Android</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>