salesforce/force-app/main/default/objects/Push_Token__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>